[build-system]
requires = ["setuptools>=69", "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "label-reconciliations"
version = "0.1.0"
description = "Cas Fork of Tools for NfN/label reconciliation and formatting."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "California Academy of Sciences", email = "mdelaroca@calacademy.org" }]
requires-python = ">=3.9"

dependencies = [
  "Jinja2 ~= 3.1.6",
  "MarkupSafe ~= 3.0.2",
  "fuzzywuzzy ~= 0.18.0",
  "inflect ~= 7.5.0",
  "jsonpath-ng ~= 1.7.0",
  "numpy ~= 2.3.3",
  "pandas ~= 2.3.2",
  "plotly ~= 6.3.0",
  "python-Levenshtein ~= 0.27.1",
  "python-dateutil ~= 2.9.0",
  "pytest ~= 8.4.2",
]

[project.scripts]
# console command -> module:function
label-reconcile = "label_reconciliations.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include non-Python files inside the package (summary assets)
[tool.setuptools.package-data]
label_reconciliations = ["summary/*.css", "summary/*.html", "summary/*.js"]

# If you prefer MANIFEST.in, you can use it too, but the table above is enough for wheel installs.
